--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=currency-exchange-service
 server.port=8000
 
 logging.level.org.org.springframework=info
+
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
